# pydbull

./: README.md  pyproject.toml
.github/workflows/: test.yml
pydbull/: __init__.py  _utils.py  model_validator.py
pydbull/adapter/: __init__.py  base.py  pydantic_adapter.py
pydbull/django/: __init__.py  adapter.py
tests/: test_pydantic_adapter.py
tests/test_django/: settings.py
tests/test_django/tests/: test_django_adapter.py  test_django_pydbull_model.py  test_model_validator.py
